--- a/ArcMap/MainWindow.xaml
+++ b/ArcMap/MainWindow.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:esri="http://schemas.esri.com/arcgis/runtime/2013"
         xmlns:local="clr-namespace:ArcMap"
+        xmlns:view="clr-namespace:ArcMap.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="525" Width="790">
     <Window.Resources>
         <local:MapViewModel x:Key="MapViewModel" />
     </Window.Resources>
     <Grid>
-        <esri:MapView Map="{Binding Map, Source={StaticResource MapViewModel}}" />
+        <view:MapViewUC/>
     </Grid>
 </Window>
