--- a/ArcMap/View/MapViewUC.xaml
+++ b/ArcMap/View/MapViewUC.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="220"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <esri:MapView x:Name="MyMapView" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <esri:MapView x:Name="MyMapView" Grid.Column="1" Grid.ColumnSpan="2" MouseMove="MyMapView_MouseMove"/>
         <StackPanel Grid.Column="0" Width="30">
             <StackPanel.Background>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}"/>
