--- a/ArcMap/View/MapViewUC.xaml
+++ b/ArcMap/View/MapViewUC.xaml
@@ -243,6 +243,14 @@
                     <SolidColorBrush Color="{StaticResource {x:Static SystemColors.ControlLightColorKey}}"/>
                 </TextBlock.Background>
             </TextBlock>
+            <StackPanel Grid.Row="1" Grid.Column="4" Width="20" Margin="80,50,0,0">
+                <Button Margin="0,10" x:Name="ZoomIn_btn" ToolTip="Zoom In" Click="ZoomIn_btn_Click">
+                    <Image Source="/Icons/plus_48x48.png"/>
+                </Button>
+                <Button Margin="0,10" x:Name="ZoomOut_btn" ToolTip="Zoom Out" Click="ZoomOut_btn_Click">
+                    <Image Source="/Icons/minus_48x48.png"/>
+                </Button>
+            </StackPanel>
         </Grid>
     </DockPanel>
 </UserControl>
